--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,8 +116,8 @@ dependencies {
 
 
     // For Glide..
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
 
     //Dependence for AR core sceneForm
@@ -182,3 +182,8 @@ sceneform.asset('sampledata/model_two/LampPost.obj',
         'default',
         'sampledata/model_two/LampPost.sfa',
         'src/main/assets/LampPost')
+
+sceneform.asset('sampledata/gingerbread/gingerbread_house.obj',
+        'default',
+        'sampledata/gingerbread/gingerbread_house.sfa',
+        'src/main/assets/gingerbread_house')
