--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         android:theme="@style/SplashTheme"
         android:usesCleartextTraffic="true"
         tools:overrideLibrary="androidx.camera.lifecycle">
-        <activity android:name=".view.NewFriendRequestAct"></activity>
-            <activity android:name=".view.SearchFriendsListAct" />
+
         <activity android:name=".SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,10 +22,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.LoginScreen" />
-        <activity android:name=".view.TutorialActivity" />
-        <activity android:name=".view.WebViewActivity" />
-
+        <activity android:name=".view.LoginScreen"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            />
+        <activity android:name=".view.TutorialActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            />
+        <activity android:name=".view.WebViewActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            />
+        <activity android:name=".view.NewFriendRequestAct"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            />
+        <activity android:name=".view.SearchFriendsListAct"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            />
         <activity
             android:name=".ScannerActivity"
             android:screenOrientation="portrait"
@@ -46,31 +56,31 @@
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".view.HowToPlayActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity
             android:name=".view.SettingsScreenAct"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".view.UserInformationActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".view.FAQActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".view.SettingsWebViewActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".view.rewards.RewardsScreenActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity
             android:name=".view.rewards.rewards_details.RewardsDetailsActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".view.TrailsDetailsActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".view.rewards.rewards_details.RewardsRedeemDetailsActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".view.DiscoverScreenActivity"
             android:screenOrientation="portrait"
@@ -78,55 +88,67 @@
             android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity
             android:name=".view.FeedPostActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".view.LeaderBoardActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".view.CreatorPostActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".view.profile.ProfileScreenActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".view.profile.FriendProfileScreenActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".view.MyFriendsListScreenActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".view.profile.ProfileEditActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".view.TrailScreenActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".view.DiscoverDetailsScreenActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity
+            android:name=".view.ChallengeActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity
+            android:name=".view.MyAchievementScreenActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            />
+        <activity
+            android:name=".view.MyAchievementScreenDetailsActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            />
+        <activity android:name=".view.QuizChallengeQuestionActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            />
+        <activity android:name=".view.profile.camera.ProfileScreenMainActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            />
+
+
         <activity
             android:name=".view.qrcode.DecoderActivity"
             android:theme="@style/SplashTheme" />
         <activity
-            android:name=".view.ChallengeActivity"
-            android:theme="@style/SplashTheme" />
-        <activity
-            android:name=".view.MyAchievementScreenActivity"
-            />
-        <activity
-            android:name=".view.MyAchievementScreenDetailsActivity"
-            />
-        <activity
             android:name=".camerafiles.activity.CameraActivity"
             android:theme="@style/SplashTheme" />
         <activity android:name=".camerafiles.activity.SelfieChallengeImagePostActivity" />
-        <activity android:name=".view.QuizChallengeQuestionActivity" />
+
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
         <activity
             android:name=".camerafiles.fragments.MainActivity"
             android:theme="@style/SplashTheme" />
-        <activity android:name=".view.profile.camera.ProfileScreenMainActivity" />
+
+
+
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
