--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1..5.30"
+    ext.kotlin_version = "1.5.30"
     ext.google_services_version="4.3.5"
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.gms:google-services:$google_services_version"
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.2'
-        classpath 'com.google.firebase:perf-plugin:1.3.5'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
+        classpath 'com.google.firebase:perf-plugin:1.4.0'
         classpath 'com.google.ar.sceneform:plugin:1.17.1'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
 
@@ -22,7 +22,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
